[FIX] runbot_merge: dark mode dropwdown and nav
Website editor does weird shit and in 17.0 has absolutely no support
for dark mode.

Considered nuking the website editor SCSS entirely as I don't see what
use it would be on the mergebot, but for now just override a bunch of
its rules to remove these broken overrides. The result may not look
the absolute best but at least they're readable.

Fixes #1197

--- a/runbot_merge/static/scss/revariable.scss
+++ b/runbot_merge/static/scss/revariable.scss
@@ -122,3 +122,17 @@ a, .nav-link {
     background-color: oklch(from var(--dark) l c h / 0.1);
   }
 }
+
+// revert website editor gunk
+.navbar-light,
+.o_cc .dropdown-menu .dropdown-item,
+.o_cc .dropdown-menu .dropdown-item:hover,
+.navbar-light .dropdown-menu .dropdown-item,
+.navbar-light .dropdown-menu .dropdown-item:hover,
+.navbar-light .navbar-nav .nav-link,
+.navbar-light .navbar-nav .nav-link:hover,
+.navbar-light a:not(.btn),
+.navbar-light a:not(.btn):hover,
+{
+  color: inherit !important;
+}
